# ADS_ReactDjango2

./: .gitignore  .gitlab-ci.yml  pyproject.toml
.github/workflows/: django-ci.yml
Additional_files/: BlueGreen.txt  Rollback.sh  Script_Installation.sh  Script_Installation_Git_Version.sh  Script_Installation_Git_VersionGreenBlue.sh  Script_Installation_Git_VersionGreenBlueV2.sh  Update.sh  Workflow_git.txt  my_app.conf  my_appBG.conf  process.txt  uninstall.sh
my_app/backend_project/: pyproject.toml
my_app/backend_project/src/: db.sqlite3
my_app/backend_project/src/api/: test.py  urls.py  views.py
my_app/backend_project/src/core/: settings.py  urls.py
my_app/backend_project/src/media/: fichier de test.ods
my_app/frontend_app/: package-lock.json  package.json
my_app/frontend_app/public/: index.html
my_app/frontend_app/src/: App.js
